Changed pack200 to false

--- a/com.cloudsmith.puppet.modinfo.build/buckminster.properties
+++ b/com.cloudsmith.puppet.modinfo.build/buckminster.properties
@@ -8,5 +8,5 @@ qualifier.replacement.*=generator:lastModified
 generator.lastModified.format='v'yyyyMMddHHmm
 
 # define the site generation properties
-site.pack200=true
+site.pack200=false
 site.retain.unpacked=false
