Classes that are not used in PE Console are filtered out

--- a/com.cloudsmith.puppet.modinfo.cli/build.properties
+++ b/com.cloudsmith.puppet.modinfo.cli/build.properties
@@ -1,4 +1,5 @@
 source.. = src/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               lib/yamlbeans-1.0.jar
